hunt: fix overlapping text on history, alerts and signatures page

--- a/hunt/src/App.scss
+++ b/hunt/src/App.scss
@@ -145,11 +145,6 @@ span.eventValue {
    font-size: 18px;
 }
 
-
-.list-view-pf .list-group-item-heading {
-   flex-basis: calc(35% - 20px);
-}
-
 .value-field-complete {
    display: flex;
    flex-direction: row;
